# SPIDController

./: CMakeLists.txt  README.md  simplePIDController.cpp  simplePIDController.h
.github/workflows/: auto-tag-main.yml  trigger-release.yml
include/: simplePIDControllerInterface.h
simplePIDController/: CMakeLists.txt  sPIDController.cpp  sPIDController.h
simplePIDController/gtests/: CMakeLists.txt  sPIDControllerTests.cpp
source/: CMakeLists.txt  sPIDController.cpp  sPIDController.h  simplePIDController.cpp  simplePIDController.h
source/gtests/: CMakeLists.txt  sPIDControllerTests.cpp
tests/: CMakeLists.txt  simplePIDControllerTests.cpp
